--- a/templates/base.html
+++ b/templates/base.html
@@ -3,26 +3,53 @@
 <html lang="en">
 
 <head>
+
+    {% block meta %}
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="Description" content="Enter your description here" />
+    {% endblock meta %}
+
+
+    {% block extra_meta %}
+    {% endblock extra_meta %}
+
+
+    {% block corecss %}
     <script src="https://kit.fontawesome.com/81e9d69a66.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css">
+    {% endblock corecss %}
+
+    {% block extra_css %}
+    {% endblock extra_css %}
+
+
+    {% block corejs %}
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
+    {% endblock corejs %}
+
+
+    {% block extra_js %}
+    {% endblock extra_js %}
+
+
     <link rel="stylesheet" href="assets/css/style.css">
 
-    <title>Focus-Fitness</title>
+    <title>Focus-Fitness {% block extra_title %}{% endblock extra_title %}</title>
 </head>
 
 <body>
+    {% include "messages.html" %}
 
     {% block content %}
-
     {% endblock content %}
+
+    {% block postload_js %}
+    {% endblock postload_js %}
 
 </body>
 
