changed setup to include production and env and Static setup

--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -45,7 +45,7 @@
 <section id="section2">
     <div class="feature-container card-group">
         <div class="card">
-            <img src="{% static 'media/bidman.jpg' %}" class="card-img-top" alt="..." />
+            <img src="{% static 'images/bidman.jpg' %}" class="card-img-top" alt="..." />
             <div class="card-body">
                 <h3 class="card-title text-center aw">Work Outs</h3>
                 <a class="card-text d-block text-center mont_b text-bk" href="">Strenth Training</a>
@@ -61,10 +61,10 @@
                     write you owne blogs to.
                 </p>
             </div>
-            <img src="{% static 'media/bruce-mars-(friends)800.jpg' %}" class="card-img-top" alt="..." />
+            <img src="{% static 'images/bruce-mars-(friends)800.jpg' %}" class="card-img-top" alt="..." />
         </div>
         <div class="card">
-            <img src="{% static 'media/pool-man.jpg' %}" class="card-img-top" alt="..." />
+            <img src="{% static 'images/pool-man.jpg' %}" class="card-img-top" alt="..." />
             <div class="card-body">
                 <h3 class="card-title text-center aw">Diet Plans</h3>
                 <a class="card-text d-block text-center mont_b text-bk" href="">Weight Loss</a>
@@ -78,7 +78,7 @@
     <div class="card my-5 py-5">
         <div class="row no-gutters align-items-center">
             <div class="col-md-4 mx-auto" style="max-width: 300px;">
-                <img src="{% static 'media/womenblog-crop.jpg' %}" class="card-img bs-2" alt="...">
+                <img src="{% static 'images/womenblog-crop.jpg' %}" class="card-img bs-2" alt="...">
             </div>
 
             <div class="col-md-8">
@@ -107,7 +107,7 @@
     <!--Product Cards-->
     <div class="card-deck">
         <div class="card bs-5">
-            <img src="{% static 'media\bcaa.jpg' %}" class="card-img-top card-item-size mt-2" alt="...">
+            <img src="{% static 'images\bcaa.jpg' %}" class="card-img-top card-item-size mt-2" alt="...">
             <div class="card-body">
                 <h5 class="card-title aw text-center">Card title</h5>
             </div>
@@ -117,7 +117,7 @@
             </div>
         </div>
         <div class="card bs-5">
-            <img src="{% static 'media\creatine.jpg' %}" class="card-img-top card-item-size mt-2" alt="...">
+            <img src="{% static 'images\creatine.jpg' %}" class="card-img-top card-item-size mt-2" alt="...">
             <div class="card-body">
                 <h5 class="card-title aw text-center">Card title</h5>
 
@@ -128,7 +128,7 @@
             </div>
         </div>
         <div class="card bs-5">
-            <img src="{% static 'media\protien.jpg' %}" class="card-img-top card-item-size mt-2" alt="...">
+            <img src="{% static 'images\protien.jpg' %}" class="card-img-top card-item-size mt-2" alt="...">
             <div class="card-body">
                 <h5 class="card-title aw text-center">Card title</h5>
             </div>
@@ -150,7 +150,7 @@
                 <!--{for loop here}-->
                 <div class="col-md-4 col-12 ">
                     <div class="card ">
-                        <img src="{% static 'media\big-man.jpg' %}" class="card-img-top mt-3 card-item-size" alt="...">
+                        <img src="{% static 'images\big-man.jpg' %}" class="card-img-top mt-3 card-item-size" alt="...">
                         <div class="card-body">
                             <h5 class="card-title aw text-center">Card title</h5>
                             <p class="card-text">Some quick example text to build on the card title and make up the
@@ -161,7 +161,7 @@
                 </div>
                 <div class="col-md-4 col-12 ">
                     <div class="card">
-                        <img src="{% static 'media\ladypress.jpg' %}" class="card-img-top mt-3 card-item-size"
+                        <img src="{% static 'images\ladypress.jpg' %}" class="card-img-top mt-3 card-item-size"
                             alt="...">
                         <div class="card-body">
                             <h5 class="card-title aw text-center">Card title</h5>
@@ -173,7 +173,7 @@
                 </div>
                 <div class="col-md-4 col-12">
                     <div class="card">
-                        <img src="{% static 'media\alora-griffiths-lady-pull.jpg' %}"
+                        <img src="{% static 'images\alora-griffiths-lady-pull.jpg' %}"
                             class="card-img-top mt-3 card-item-size" alt="...">
                         <div class="card-body">
                             <h5 class="card-title aw text-center">Card title</h5>
