--- a/templates/base.html
+++ b/templates/base.html
@@ -35,8 +35,8 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark">
-        <a href="{% url 'home' %}" class="nav-link main-logo-link">
-            <img id="design2" src="{% static 'media/logo.png' %}" alt="" />
+        <a href="#" class="nav-link main-logo-link">
+            <img id="design2" src="{% static 'images/logo.png' %}" alt="" />
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -61,7 +61,7 @@
                         Pages
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="{% url 'about' %}">About</a>
+                        <a class="dropdown-item" href="#">About</a>
                         <a class="dropdown-item" href="#">Shop</a>
                         <a class="dropdown-item" href="#">Blog</a>
                         <a class="dropdown-item" href="#">Contact Us</a>
@@ -89,7 +89,7 @@
     <div class=" container-fluid footer-image">
         <div class="row align-items-center">
             <div class="col-3 d-none d-md-block ">
-                <img class="ml-3" src="{% static 'media/logo.png' %}" alt="">
+                <img class="ml-3" src="{% static 'images/logo.png' %}" alt="">
             </div>
             <div class="col-md-6 col-sm-9 col-12">
                 <p class="aw text-wht text-center">Be the First to recieve exciting news, Features, and special
@@ -152,7 +152,7 @@
 
         </div>
         <div class="text-center d-block d-md-none">
-            <img src="{% static 'media/logo.png' %}" alt="">
+            <img src="{% static 'images/logo.png' %}" alt="">
             <h4 class="aw text-wht text-center mb-2">CopyRight ©
             </h4>
         </div>
