got contact form working and changed location of htmls

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -119,6 +119,14 @@ p {
   }
 }
 
+/* .message {
+  position: absolute;
+  top: 10rem;
+  left: 0px;
+  z-index: 1999999;
+} */
+
+
 /* TopNav*/
 .navbar {
   padding: 0px;
