added cart app and views

--- a/templates/base.html
+++ b/templates/base.html
@@ -62,7 +62,7 @@
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item" href="{% url 'about' %}">About</a>
-                        <a class="dropdown-item" href="#">Shop</a>
+                        <a class="dropdown-item" href="{% url 'cart:product-list' %}">Shop</a>
                         <a class="dropdown-item" href="#">Blog</a>
                         <a class="dropdown-item" href="{% url 'contact' %}">Contact Us</a>
                     </div>
