added detial views but have a bug

--- a/templates/about.html
+++ b/templates/about.html
@@ -3,6 +3,15 @@
 
 
 {% block content %}
+<div class="container-fluid bg-black">
+    <div class="row">
+        <div class="col-md-12 mb-0">
+            <a class="text-wht aw" href="{% url 'home' %}">Home</a>
+            <span class="mx-2 mb-0 text-wht">/</span>
+            <strong class="text-wht aw">About</strong>
+        </div>
+    </div>
+</div>
 <div id="about-pic">
     <div class="container about">
         <div class="overlay">
