--- a/templates/cart/product_list.html
+++ b/templates/cart/product_list.html
@@ -17,10 +17,11 @@
             {% for product in object_list %}
             <div class="col-lg-4 col-md-6 mb-4">
                 <figure class="block-4-image">
-                    <a href=""><img class="img-fluid" src="{{ product.image.url }}" alt=""></a>
+                    <a href="{{ product.get_absolute_url }}"><img class="img-fluid" src="{{ product.image.url }}"
+                            alt=""></a>
                 </figure>
                 <div class="block-4-text p-4">
-                    <a href="">
+                    <a href="{{ product.get_absolute_url }}">
                         <h3>{{ product.title }}</h3>
                     </a>
                     <p class="mb-0 text-bk">{{ product.description }}</p>
