--- a/templates/cart/product_detail.html
+++ b/templates/cart/product_detail.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-
+{% load crispy_forms_tags %}
 {% block content %}
 
 <div class="container-fluid bg-black">
@@ -7,23 +7,30 @@
         <div class="col-md-12 mb-0">
             <a class="text-wht aw" href="{% url 'home' %}">Home</a>
             <span class="mx-2 mb-0 text-wht">/</span>
-            <!-- <a class="text-wht aw" href="{% url 'product-list' %}">hop</a>
-            <span class="mx-2 mb-0 text-wht">/</span> -->
             <strong class="text-wht aw">{{ product.title }}</strong>
         </div>
     </div>
 </div>
-<div class="section">
+
+<div class="site-section">
     <div class="container">
         <div class="row mb-5">
             <div class="col-md-6">
-                <img class="img-fluid" src="{{ product.image.url }}" alt="">
+                <img src="{{ product.image.url }}" class="img-fluid">
             </div>
             <div class="col-md-6">
-                <h2 class="">{{ product.title }}</h2>
+                <h2 class="aw text-black text-center mt-3">{{ product.title }}</h2>
                 <p>{{ product.description }}</p>
+                <form method="POST">
+                    {% csrf_token %}
+                    {{ form|crispy }}
+                    <button type="submit" class="btn btn-sm btn-primary buy-now">
+                        Add to cart <i class="fad fa-cart-plus fa-small"></i></button>
+                </form>
+
             </div>
         </div>
     </div>
 </div>
+
 {% endblock content %}
