--- a/templates/cart/product_list.html
+++ b/templates/cart/product_list.html
@@ -11,30 +11,27 @@
         </div>
     </div>
 </div>
-<div class="section">
+
+<div class="site-section">
     <div class="container">
         <div class="row mb-5">
             {% for product in object_list %}
-            <div class="col-lg-4 col-md-6 mb-4">
+            <div class="col-lg-4 col-md-6 mb-4" data-aos='fade-up'>
+
                 <figure class="block-4-image">
-                    <a href="{{ product.get_absolute_url }}"><img class="img-fluid" src="{{ product.image.url }}"
-                            alt=""></a>
+                    <a href="{{ product.get_absolute_url }}"><img src="{{ product.image.url }}" class="img-fluid"></a>
                 </figure>
+
                 <div class="block-4-text p-4">
                     <a href="{{ product.get_absolute_url }}">
                         <h3>{{ product.title }}</h3>
                     </a>
-                    <p class="mb-0 text-bk">{{ product.description }}</p>
+                    <p class="mb-0">{{ product.description }}</p>
                 </div>
             </div>
             {% endfor %}
         </div>
     </div>
 </div>
-
-
-
-
-
 
 {% endblock content %}
