--- a/static/css/style.css
+++ b/static/css/style.css
@@ -119,12 +119,13 @@ p {
   }
 }
 
-/* .message {
+#cart {
   position: absolute;
-  top: 10rem;
-  left: 0px;
-  z-index: 1999999;
-} */
+  top: -2rem;
+  right: 15px;
+  z-index: 9999999;
+  font-size: 1.35rem;
+}
 
 
 /* TopNav*/
