added get price to models and cart.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -85,8 +85,8 @@
 
                 <div id="cart" class="mr-md-4">
                     <a href="{% url 'cart:summary' %}" class="site-cart">
-                        <span><i class="fas fa-shopping-cart  text-wht"></i></span>
-                        <span class="count  text-wht">$1179.00</span>
+                        <span><i class="fad fa-shopping-cart text-wht"></i></span>
+                        <span class="count aw text-wht">$1179.00</span>
                     </a>
                 </div>
 
