--- a/templates/cart/cart.html
+++ b/templates/cart/cart.html
@@ -40,7 +40,7 @@
                                     <small>Size: {{ item.size.name }}</small>
                                     <small>Colour: {{ item.colour.name }}</small>
                                 </td>
-                                <td class="text-right">$0</td>
+                                <td class="text-right aw">${{ item.product.get_price }}</td>
                                 <td class="px-1">
                                     <div class="input-group mb-3" style="max-width: 120px;">
                                         <div class="input-group-prepend">
@@ -48,7 +48,8 @@
                                                 &minus;
                                             </a>
                                         </div>
-                                        <input type="text" class="form-control text-center" value="{{ item.quantity }}">
+                                        <input type="text" class="form-control text-center aw"
+                                            value="{{ item.quantity }}">
                                         <div class="input-group-append">
                                             <a href="#" class="btn btn-outline-primary">
                                                 &plus;
@@ -56,8 +57,8 @@
                                         </div>
                                     </div>
                                 </td>
-                                <td class="px-1 text-right">
-                                    $0
+                                <td class="px-1 text-right aw">
+                                    ${{ item.get_tatal_price_item }}
                                 </td>
                                 <td class="px-1">
                                     <a href="#" class="btn btn-primary btn-sm">X</a>
