--- a/templates/cart/cart.html
+++ b/templates/cart/cart.html
@@ -21,12 +21,12 @@
                     <table class="mx-auto">
                         <thead>
                             <tr>
-                                <th class=" text-center px-1">Image</th>
-                                <th class=" text-center px-1">Product</th>
-                                <th class=" text-center px-1">Price</th>
-                                <th class=" text-center px-1">Quantity</th>
-                                <th class=" text-center px-1">Total</th>
-                                <th class=" text-center px-1">Actions</th>
+                                <th class="aw text-center px-1">Image</th>
+                                <th class="aw text-center px-1">Product</th>
+                                <th class="aw text-center px-1">Price</th>
+                                <th class="aw text-center px-1">Quantity</th>
+                                <th class="aw text-center px-1">Total</th>
+                                <th class="aw text-center px-1">Actions</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -36,7 +36,7 @@
                                     <img src="{{ item.product.image.url }}" class="img-fluid" style="width: 15rem;">
                                 </td>
                                 <td class="product-name px-1">
-                                    <h2 class="h5 text-black">{{ item.product.title }}</h2>
+                                    <h4 class=" text-black">{{ item.product.title }}</h4>
                                     <small>Size: {{ item.size.name }}</small>
                                     <small>Colour: {{ item.colour.name }}</small>
                                 </td>
