--- a/templates/cart/product_detail.html
+++ b/templates/cart/product_detail.html
@@ -5,7 +5,7 @@
 <div class="container-fluid bg-black">
     <div class="row">
         <div class="col-md-12 mb-0">
-            <a class="text-wht aw" href="{% url 'home' %}">Home</a>
+            <a class="text-wht aw" href="{% url 'cart:product-list' %}">Shop</a>
             <span class="mx-2 mb-0 text-wht">/</span>
             <strong class="text-wht aw">{{ product.title }}</strong>
         </div>
@@ -19,7 +19,7 @@
                 <img src="{{ product.image.url }}" class="img-fluid">
             </div>
             <div class="col-md-6">
-                <h2 class="aw text-black text-center mt-3">{{ product.title }}</h2>
+                <h4 class="aw text-black text-center mt-3">{{ product.title }}</h4>
                 <p>{{ product.description }}</p>
                 <form method="POST">
                     {% csrf_token %}
