--- a/templates/cart/product_list.html
+++ b/templates/cart/product_list.html
@@ -24,7 +24,7 @@
 
                 <div class="block-4-text p-4">
                     <a href="{{ product.get_absolute_url }}">
-                        <h3>{{ product.title }}</h3>
+                        <h5 class="text-center aw">{{ product.title }}</h5>
                     </a>
                     <p class="mb-0">{{ product.description }}</p>
                 </div>
